@@ -37,6 +37,8 @@
 
   * Added separate positioning of launcher, emulator and debugger
 
+  * Added optional display to game refresh rate adaption in fullscreen mode
+
   * Added option which lets default ROM path follow launcher navigation
 
   * Added debugger 'saveaccess' function, which saves memory access counts to
